fixed issue -- didnt close out script tag

--- a/options.html
+++ b/options.html
@@ -19,5 +19,5 @@
     <p>Choose a different background color!</p>
   </div>
 </body>
-<script src="options.js" />
+<script src="options.js"></script>
 </html>
