--- a/options.html
+++ b/options.html
@@ -3,21 +3,13 @@
 
 <head>
   <style>
-    button {
-      height: 30px;
-      width: 30px;
-      outline: none;
-      margin: 10px;
-    }
   </style>
 </head>
 
 <body>
-  <div id="buttonDiv">
-  </div>
   <div>
-    <p>Choose a different background color!</p>
+    <p>Choose a language</p>
   </div>
+  <script src="options.js"></script>
 </body>
-<script src="options.js"></script>
 </html>
