--- a/popup.html
+++ b/popup.html
@@ -2,15 +2,11 @@
 <html>
   <head>
     <style>
-      button {
-        height: 30px;
-        width: 30px;
-        outline: none;
-      }
     </style>
   </head>
   <body>
-    <button id="changeColor"></button>
-    <script src="popup.js"></script>
+    <dv>
+      Translate to another language.
+    </dv>
   </body>
 </html>
