refactored requestTranslation so that path is inside of function; added options.js for getting list of all translateable languages

--- a/options.html
+++ b/options.html
@@ -9,6 +9,8 @@
 <body>
   <div>
     <p>Choose a language</p>
+    <button id="get-languages">Get Languages</button>
+    <select id="options-select"></select>
   </div>
   <script src="options.js"></script>
 </body>
