promises mess, need to nest them

--- a/options.html
+++ b/options.html
@@ -8,9 +8,11 @@
 
 <body>
   <div>
-    <p>Choose a language</p>
-    <button id="get-languages">Get Languages</button>
+    <h3>Choose a language to translate to</h3>
+    <br>
     <select id="options-select"></select>
+    <br>
+    <button style="display:none" id="set-language">Save</button>
   </div>
   <script src="options.js"></script>
 </body>
